Remove 'conscious' vital and update scenarios accordingly; fix bug ending scene action mappings.
